# krea_regional_prompt_comfyui

./: .gitignore  README.md  __init__.py  pyproject.toml  requirements.txt
k2_region_bare/: __init__.py  engine.py  layer_injection.py  legacy.py  lora.py  masks.py  types.py
k2_region_comfy/: __init__.py  backend.py  bare_nodes.py  config.py  face_refine.py  nodes.py
k2_region_core/: __init__.py  face_detail.py  projector.py  regional_lora.py  regional_prompting.py  spatial_attention.py
k2_region_core/lora/: __init__.py  compatibility.py  library.py
k2_region_core/model/: __init__.py  artifacts.py
k2_region_core/regions/: __init__.py  geometry.py  layout.py
tests/: conftest.py  test_bare_core.py  test_config.py  test_control_help.py  test_isolation.py  test_memory_release.py  test_package.py  test_regional_lora_policy.py  test_strict_isolation.py  test_strict_prepare.py  test_token_count.py  test_workflows.py
web/: k2_region_studio.css  k2_region_studio.js
workflows/: k2_bare_kj_ideogram_starter.json  k2_region_starter.json
